--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="https://www.coolmathgames.com/sites/default/files/public_games/35975/" style="width:1300px; height: 731px;">
+<embed src="https://www.coolmathgames.com/sites/default/files/public_games/35975/" style="width:100%px; height: 100%;">
