--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="https://www.coolmathgames.com/sites/default/files/public_games/35975/" style="width:100%px; height: 100%;">
+<embed src="https://www.coolmathgames.com/sites/default/files/public_games/35975/" style="width:1366px; height: 768%;">
